back-prod/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy-prod
  labels:
    app: back-deploy-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-deploy-prod
  template:
    metadata:
      labels:
        app: back-deploy-prod
    spec:
      containers:
      - name: back-deploy-prod
        image: artearenahub/space-backend:latest
        ports:
        - containerPort: 9000
