back-prod/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: back-svc-prod
spec:
  selector:
    app: back-deploy-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: LoadBalancer
