back-prod/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ing-prod
  annotations:
    cert-manager.io/cluster-issuer: "back-clusterissuer-prod"
    spec.ingressClassName: "public"
spec:
  ingressClassName: "public"
  tls:
  - hosts:
    - api.spacearena.net
    secretName: back-prod-tls-secret
  rules:
  - host: api.spacearena.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: back-svc-prod
            port:
              number: 80
